--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongoose": "^5.9.16",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "request-ip": "^2.1.3",
     "url": "^0.11.0"
